welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (!estFaceMur()) {
	if (!estSurBiscuit())&&(!porteBiscuit()) {
	recule()
} 
if (estSurBiscuit()) {
	prendBiscuit()
}
if (porteBiscuit()) {
	while (!estSurBiscuit()) {
		avance()
	} recule()
	  poseBiscuit()
	  recule()
}
}//fin 1er while
gauche()
avance()
gauche()
avance()


